fixed issue with alignment

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body{
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    width: 600px;
     grid-template-columns: repeat(4,100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
